@@ -71,4 +71,35 @@
         25        60        0.00011     0.00010455
         30        60        0.00092     0.00092068
 
+  Test: Spline class.
+  -------------------
+
+  Values for a cubic are calculated on a grid
+  and interpolated using the Spline class.
+
+
+        x(grid)        y(grid)      y(intplt)
+  -------------------------------------------
+           -1.9          0.741          0.741
+           -1.7          1.887          1.887
+           -1.5          2.625          2.625
+           -1.3          3.003          3.003
+           -1.1          3.069          3.069
+           -0.9          2.871          2.871
+           -0.7          2.457          2.457
+           -0.5          1.875          1.875
+           -0.3          1.173          1.173
+           -0.1          0.399          0.399
+            0.1         -0.399         -0.399
+            0.3         -1.173         -1.173
+            0.5         -1.875         -1.875
+            0.7         -2.457         -2.457
+            0.9         -2.871         -2.871
+            1.1         -3.069         -3.069
+            1.3         -3.003         -3.003
+            1.5         -2.625         -2.625
+            1.7         -1.887         -1.887
+            1.9         -0.741         -0.741
+            2.1          0.861          0.861
+
   All tests pass.
