@@ -133,6 +133,7 @@
     <ClCompile Include="..\..\src\plugins\simplecalc.cpp" />
     <ClCompile Include="..\..\src\plugins\SimpleILT.cpp" />
     <ClCompile Include="..\..\src\plugins\SimpleRRKM.cpp" />
+    <ClCompile Include="..\..\src\Spline.cpp" />
     <ClCompile Include="..\..\src\System.cpp" />
     <ClCompile Include="..\..\src\plugins\ThermodynamicTable.cpp" />
     <ClCompile Include="..\..\src\TimeCounter.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="..\..\src\Rdouble.h" />
     <ClInclude Include="..\..\src\Reaction.h" />
     <ClInclude Include="..\..\src\ReactionManager.h" />
+    <ClInclude Include="..\..\src\Spline.h" />
     <ClInclude Include="..\..\src\System.h" />
     <ClInclude Include="..\..\src\TimeCounter.h" />
     <ClInclude Include="..\..\tinyxml\tinyxml.h" />
