@@ -17,32 +17,38 @@
 namespace mesmer
 {
 
+    // Criterion for determining if the spline is natural at the end points.
+
+    static const double naturalLimit = 0.99e30 ;
+
 	class Spline {
 
 	public:
 
-		Spline() : m_x(), m_y(), m_d2ydx2() {} ;
+		Spline() : m_x(), m_y(), m_d2ydx2(), m_splineDefined(false) {} ;
 		~Spline() {} ;
 
-		bool Initialize(std::vector<double> &x, std::vector<double> &y) ; 
+		bool Initialize(const std::vector<double> &x, const std::vector<double> &y, double lower = naturalLimit, double upper = naturalLimit) ; 
 
 		double Calculate(double x) const ;
-
-		void Clear() { 
-			m_x.clear(); 
-			m_y.clear() ;
-			m_d2ydx2.clear() ;
-		} ;
-
 
 	private:
 
 		Spline operator=(Spline &spline) ;
 		Spline(Spline &spline) ;
 
+		void Clear() { 
+			m_x.clear(); 
+			m_y.clear() ;
+			m_d2ydx2.clear() ;
+			m_splineDefined = false ;
+		} ;
+
 		std::vector<double> m_x ;
 		std::vector<double> m_y ;
 		std::vector<double> m_d2ydx2 ;
+
+		bool m_splineDefined ;
 
 	} ;
 
